# cbb

./: .gitignore  ANALYSIS_LINKS.md  CBB Output.csv  CBB Output.xlsx  CBBAPI_crosswalk.csv  CBB_Output.csv  CROSSWALK_INTEGRATION_SUMMARY.md  Combo_Output.csv  DISCORD_SETUP.md  FINAL_SUMMARY.md  GRADING_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  MM_Output_Final.csv  MM_Output_Final_Close.csv  MM_output.csv  MULTI_DATE_SCRAPING.md  README_MULTI_DATE_GRADING.md  VERIFICATION_GUIDE.md  WORKFLOW_UPDATES.md  claude.md  crosswalk.csv  demo_grading.py  etl.py  evanmiya-scraper.js  game_snapshots.csv  game_tracker.py  github-workflow.txt  graded_results.csv  individual_model_game_results.csv  individual_model_grades.csv  kp.csv  logger_setup.py  master_game_tracking.xlsx  master_spread_games.csv  master_total_games.csv  model_performance_summary.md  model_record.csv  notified_games.json  package-lock.json  package.json  (+18 more)
analysis/: README.md
csv_output/: fanmatch-2025-11-03.csv  fanmatch-2025-11-03.json
data/: barttorvik.csv  bt_mapped.csv  combined_data.csv  crosswalk.csv  em.csv  em_mapped.csv  final_combined_data.csv  hasla_mapped.csv  kp.csv  kp.json  kp_mapped.csv  logos.csv  oddsapi_raw.csv
docs/: CBB_Output.csv  Combo_Output.csv  MM_Output_Final.csv  MM_Output_Final_Close.csv  README.md  close.html  index.html  model_record.md  non_mm_index.html  non_mm_vids.html
historical_data/: 2025-11-03_output.csv  2025-11-04_output.csv  2025-11-12_output.csv  2025-11-13_output.csv  2025-11-14_output.csv  2025-11-15_output.csv  2025-11-16_output.csv  2025-11-17_output.csv  (+140 more)
(+84 files in other folders)
